--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -1,3 +1,19 @@
+/*-----------------------------------*\
+ * style.css
+\*-----------------------------------*/
+
+/**
+ * copyright 2022 codewithsadee
+ */
+
+
+
+
+
+/*-----------------------------------*\
+ * #CUSTOM PROPERTY
+\*-----------------------------------*/
+
 :root {
 
   /**
@@ -194,12 +210,14 @@ body.active { overflow: hidden; }
   border: 1px solid transparent;
   border-radius: var(--radius-4);
   transition: var(--transition-1);
+  cursor:pointer
 }
 
 .btn-primary { border-color: var(--color-primary); }
 
 .btn-primary:is(:hover, :focus) {
   background: var(--color-primary);
+  
   color: var(--bg-primary);
 }
 
