--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -572,6 +572,11 @@ main { overflow-x: hidden; }
 
 .about .btn-secondary { margin-bottom: 10px; }
 
+.margin {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 
 
 
