--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -21,7 +21,7 @@
    */
 
   --raw-seinna: hsl(24, 74%, 58%);
-  --sizzling-sunrise: hsl(51, 95%, 54%);
+  --sizzling-sunrise: hsl(51, 98%, 49%);
   --scarlet: hsl(13, 96%, 47%);
   --black: hsl(0, 0%, 0%);
   --white: hsl(0, 0%, 100%);
@@ -113,7 +113,99 @@ body.light_theme {
   border-radius: 10px;
 }
 
+/*-----------------------------------*\
+ * #Accordion
+\*-----------------------------------*/
+/* Accordion.css */
+.accordion {
+  
+    background: var(--bg-secondary);
+    
+    margin-left:20px;
+    margin-right:20px;
+    margin-bottom:80px;
+    padding: 25px;
+    border-radius: var(--radius-12);
+    box-shadow: var(--shadow-1);
+    
+    transition: max-height 0.5s ease, padding 0.5s ease;
+  }
+  .accordion-content {
+    max-height: 10;
+    overflow: hidden;
+    transition: max-height 0.6s ease, padding 0.5s ease;
+  }
+  
+  .accordion-content.open {
+    max-height: 500px; /* Ajusta según el contenido */
+    padding: 10px;
+  }
+  
+  .colored {
+    color: var(--raw-seinna);
+  }
+  .accordion-icon.open {
+    background: var(--raw-seinna);
+    transform: rotate(180deg);
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+  }
+  
+  .accordion .card-icon img {
+    width: 70%;
+    filter: invert(1);
+  }
+  
+  .accordion .card-title {
+    width: calc(100% - 95px);
+    color: var(--raw-seinna);
+    text-align: center;
+  }
+  
+  .accordion .card-title strong {
+    display: block;
+    color: var(--color-primary);
+    font-size: initial;
+    line-height: 1.3;
+    margin-top: 5px;
+  }
+  
+  .accordion > ion-icon { color: var(--color-primary); }
 
+
+.accordion-item {
+  border-bottom: 1px solid  #5c5c5b62;
+}
+.link-accordion {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 10px;
+  color: #3e12b8;
+
+   ;
+}
+.accordion-title {
+  background-color: var(--bg-secondary);
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.accordion-title h3 {
+  margin: 0;
+  font-size: 18px;
+  color: var(--color-primary)
+}
+
+.accordion-content {
+  padding: 10px 20px;
+  background-color: var(--bg-secondary);
+  color: var(--color-primary);
+}
 
 
 /*-----------------------------------*\
@@ -396,7 +488,7 @@ body.active { overflow: hidden; }
 
 .nav-toggle-btn {
   position: relative;
-  transform: rotate(-55deg);
+
   transition: var(--transition-1);
   z-index: 2;
 }
@@ -411,7 +503,7 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.nav-toggle-btn :is(.one, .three) { width: 10px; }
+.nav-toggle-btn :is(.one, .three) { width: 20px; }
 
 .nav-toggle-btn .one {
   margin-left: auto;
