--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -20,7 +20,7 @@
    * colors
    */
 
-  --raw-seinna: hsl(24, 74%, 58%);
+  --raw-seinna: hsl(221, 69%, 50%);
   --sizzling-sunrise: hsl(51, 98%, 49%);
   --scarlet: hsl(13, 96%, 47%);
   --black: hsl(0, 0%, 0%);
@@ -30,7 +30,7 @@
    * typography
    */
 
-  --ff-saira-stencil-one: "Saira Stencil One", sans-serif; 
+  --ff-saira-stencil-one: "Saira Stencil One", sans-serif;
   --ff-poppins: 'Poppins', sans-serif;
   --ff-roboto: 'Roboto', sans-serif;
 
@@ -99,6 +99,7 @@ body.light_theme {
   --shadow-1: 10px 10px 40px var(--card-shadow);
 
 }
+
 /*-----------------------------------*\
  * #Carousel
 \*-----------------------------------*/
@@ -118,75 +119,82 @@ body.light_theme {
 \*-----------------------------------*/
 /* Accordion.css */
 .accordion {
-  
-    background: var(--bg-secondary);
-    
-    margin-left:20px;
-    margin-right:20px;
-    margin-bottom:80px;
-    padding: 25px;
-    border-radius: var(--radius-12);
-    box-shadow: var(--shadow-1);
-    
-    transition: max-height 0.5s ease, padding 0.5s ease;
-  }
-  .accordion-content {
-    max-height: 10;
-    overflow: hidden;
-    transition: max-height 0.6s ease, padding 0.5s ease;
-  }
-  
-  .accordion-content.open {
-    max-height: 500px; /* Ajusta según el contenido */
-    padding: 10px;
-  }
-  
-  .colored {
-    color: var(--raw-seinna);
-  }
-  .accordion-icon.open {
-    background: var(--raw-seinna);
-    transform: rotate(180deg);
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-  }
-  
-  .accordion .card-icon img {
-    width: 70%;
-    filter: invert(1);
-  }
-  
-  .accordion .card-title {
-    width: calc(100% - 95px);
-    color: var(--raw-seinna);
-    text-align: center;
-  }
-  
-  .accordion .card-title strong {
-    display: block;
-    color: var(--color-primary);
-    font-size: initial;
-    line-height: 1.3;
-    margin-top: 5px;
-  }
-  
-  .accordion > ion-icon { color: var(--color-primary); }
+
+  background: var(--bg-secondary);
+
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 80px;
+  padding: 25px;
+  border-radius: var(--radius-12);
+  box-shadow: var(--shadow-1);
+
+  transition: max-height 0.5s ease, padding 0.5s ease;
+}
+
+.accordion-content {
+  max-height: 10;
+  overflow: hidden;
+  transition: max-height 0.6s ease, padding 0.5s ease;
+}
+
+.accordion-content.open {
+  max-height: 500px;
+  /* Ajusta según el contenido */
+  padding: 10px;
+}
+
+.colored {
+  color: var(--raw-seinna);
+}
+
+.accordion-icon.open {
+  background: var(--raw-seinna);
+  transform: rotate(180deg);
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+}
+
+.accordion .card-icon img {
+  width: 70%;
+  filter: invert(1);
+}
+
+.accordion .card-title {
+  width: calc(100% - 95px);
+  color: var(--raw-seinna);
+  text-align: center;
+}
+
+.accordion .card-title strong {
+  display: block;
+  color: var(--color-primary);
+  font-size: initial;
+  line-height: 1.3;
+  margin-top: 5px;
+}
+
+.accordion>ion-icon {
+  color: var(--color-primary);
+}
 
 
 .accordion-item {
-  border-bottom: 1px solid  #5c5c5b62;
+  border-bottom: 1px solid #5c5c5b62;
 }
+
 .link-accordion {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  
+
   margin-right: 10px;
   color: #3e12b8;
 
-   ;
+  ;
 }
+
 .accordion-title {
   background-color: var(--bg-secondary);
   padding: 10px 20px;
@@ -216,8 +224,8 @@ body.light_theme {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  
-  
+
+
   z-index: 1000;
   display: flex;
   align-items: center;
@@ -229,15 +237,21 @@ body.light_theme {
   margin-right: 10px;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
-a { text-decoration: none; }
+a {
+  text-decoration: none;
+}
 
 a,
 img,
@@ -248,7 +262,9 @@ label,
 select,
 button,
 textarea,
-ion-icon { display: block; }
+ion-icon {
+  display: block;
+}
 
 input,
 button,
@@ -260,12 +276,18 @@ textarea {
 }
 
 button,
-select { cursor: pointer; }
+select {
+  cursor: pointer;
+}
 
 input,
-textarea { width: 100%; }
+textarea {
+  width: 100%;
+}
 
-ion-icon { pointer-events: none; }
+ion-icon {
+  pointer-events: none;
+}
 
 :is(a, button, select) {
   outline-color: var(--scarlet);
@@ -287,7 +309,9 @@ body {
   transition: var(--transition-1);
 }
 
-body.active { overflow: hidden; }
+body.active {
+  overflow: hidden;
+}
 
 
 
@@ -297,7 +321,9 @@ body.active { overflow: hidden; }
  * #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 10px; }
+.container {
+  padding-inline: 10px;
+}
 
 .h1 {
   font-size: var(--fs-1);
@@ -313,13 +339,21 @@ body.active { overflow: hidden; }
   line-height: 1.2;
 }
 
-.h2 { font-size: var(--fs-2); }
+.h2 {
+  font-size: var(--fs-2);
+}
 
-.h3 { font-size: var(--fs-3); }
+.h3 {
+  font-size: var(--fs-3);
+}
 
-.h4 { font-size: var(--fs-5); }
+.h4 {
+  font-size: var(--fs-5);
+}
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 100%;
+}
 
 .btn {
   max-width: max-content;
@@ -331,14 +365,16 @@ body.active { overflow: hidden; }
   border: 1px solid transparent;
   border-radius: var(--radius-4);
   transition: var(--transition-1);
-  cursor:pointer
+  cursor: pointer
 }
 
-.btn-primary { border-color: var(--color-primary); }
+.btn-primary {
+  border-color: var(--color-primary);
+}
 
 .btn-primary:is(:hover, :focus) {
   background: var(--color-primary);
-  
+
   color: var(--bg-primary);
 }
 
@@ -348,7 +384,9 @@ body.active { overflow: hidden; }
   color: var(--black);
 }
 
-.btn-secondary:is(:hover, :focus) { --raw-seinna: hsl(24, 74%, 64%); }
+.btn-secondary:is(:hover, :focus) {
+  --raw-seinna: hsl(24, 74%, 64%);
+}
 
 .section-subtitle {
   position: relative;
@@ -417,7 +455,7 @@ body.active { overflow: hidden; }
 
 .header.active {
   padding-block: 12px;
-  background: var(--bg-secondary);
+  backdrop-filter: blur(100px);
   box-shadow: var(--shadow-1);
 }
 
@@ -429,6 +467,7 @@ body.active { overflow: hidden; }
 }
 
 .logo {
+  padding-top: 10px;
   position: relative;
   min-width: 77px;
   z-index: 2;
@@ -470,7 +509,9 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.header.active .theme-btn { background: var(--bg-primary); }
+.header.active .theme-btn {
+  background: var(--bg-primary);
+}
 
 .theme-btn .icon {
   position: relative;
@@ -489,33 +530,47 @@ body.active { overflow: hidden; }
 
 .nav-toggle-btn {
   position: relative;
-
+  color: var(--raw-seinna);
   transition: var(--transition-1);
   z-index: 2;
 }
 
-.nav-toggle-btn.active { transform: rotate(-45deg); }
+.nav-toggle-btn.active {
+  transform: rotate(-45deg);
+  color: var(--raw-seinna);
+}
 
 .nav-toggle-btn span {
   width: 20px;
   height: 2px;
-  background: var(--color-primary);
+  
+  background: var(--raw-seinna);
   margin: 5px;
   transition: var(--transition-1);
 }
 
-.nav-toggle-btn :is(.one, .three) { width: 20px; }
+.nav-toggle-btn :is(.one, .three) {
+  width: 20px;
+  color: var(--raw-seinna)
+}
 
 .nav-toggle-btn .one {
   margin-left: auto;
   transform-origin: left;
+  color: var(--raw-seinna);
 }
 
-.nav-toggle-btn .three { transform-origin: right; }
+.nav-toggle-btn .three {
+  transform-origin: right;
+}
 
-.nav-toggle-btn.active .one { transform: rotate(90deg) translateX(-3px); }
+.nav-toggle-btn.active .one {
+  transform: rotate(90deg) translateX(-3px);
+}
 
-.nav-toggle-btn.active .three { transform: rotate(90deg) translateX(3px); }
+.nav-toggle-btn.active .three {
+  transform: rotate(90deg) translateX(3px);
+}
 
 .navbar {
   position: fixed;
@@ -538,7 +593,7 @@ body.active { overflow: hidden; }
   transition-delay: 0s;
 }
 
-.navbar-list > li {
+.navbar-list>li {
   margin-block: 20px;
   padding-inline: 50px;
   overflow: hidden;
@@ -573,7 +628,9 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus)::before { width: 100%; }
+.navbar-link:is(:hover, :focus)::before {
+  width: 100%;
+}
 
 
 
@@ -583,7 +640,9 @@ body.active { overflow: hidden; }
  * #HERO
 \*-----------------------------------*/
 
-main { overflow-x: hidden; }
+main {
+  overflow-x: hidden;
+}
 
 .hero {
   min-height: 100vh;
@@ -601,16 +660,22 @@ main { overflow-x: hidden; }
   margin-bottom: 30px;
 }
 
-:is(.hero-social-list, .scroll-down) { display: none; }
+:is(.hero-social-list, .scroll-down) {
+  display: none;
+}
 
-.hero-content { max-width: 450px; }
+.hero-content {
+  max-width: 450px;
+}
 
 .hero-title {
   text-align: center;
   margin-bottom: 30px;
 }
 
-.hero .btn-primary { margin-inline: auto; }
+.hero .btn-primary {
+  margin-inline: auto;
+}
 
 
 
@@ -620,7 +685,9 @@ main { overflow-x: hidden; }
  * #STATS
 \*-----------------------------------*/
 
-.stats { padding-block: var(--section-padding); }
+.stats {
+  padding-block: var(--section-padding);
+}
 
 .stats-list {
   display: grid;
@@ -638,7 +705,9 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.stats-card:is(:hover, :focus) { transform: translateY(-5px); }
+.stats-card:is(:hover, :focus) {
+  transform: translateY(-5px);
+}
 
 .stats-card .card-icon {
   background: var(--raw-seinna);
@@ -668,7 +737,9 @@ main { overflow-x: hidden; }
   margin-top: 5px;
 }
 
-.stats-card > ion-icon { color: var(--color-secondary); }
+.stats-card>ion-icon {
+  color: var(--color-secondary);
+}
 
 
 
@@ -678,7 +749,9 @@ main { overflow-x: hidden; }
  * #ABOUT
 \*-----------------------------------*/
 
-.about { padding-block: var(--section-padding); }
+.about {
+  padding-block: var(--section-padding);
+}
 
 .about-banner {
   max-width: 400px;
@@ -691,7 +764,9 @@ main { overflow-x: hidden; }
   width: 100%;
 }
 
-.about .btn-secondary { margin-bottom: 10px; }
+.about .btn-secondary {
+  margin-bottom: 10px;
+}
 
 .margin {
   margin-left: 20px;
@@ -706,9 +781,13 @@ main { overflow-x: hidden; }
  * #SKILLS
 \*-----------------------------------*/
 
-.skills { padding-block: var(--section-padding); }
+.skills {
+  padding-block: var(--section-padding);
+}
 
-.skills-content { margin-bottom: 50px; }
+.skills-content {
+  margin-bottom: 50px;
+}
 
 .skills-toggle {
   background: var(--bg-secondary);
@@ -748,10 +827,14 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.toggle-btn.active { color: var(--white); }
+.toggle-btn.active {
+  color: var(--white);
+}
 
 .skills-box.active .skills-list,
-.skills-box .tools-list { display: none; }
+.skills-box .tools-list {
+  display: none;
+}
 
 .skills-box .skills-list,
 .skills-box.active .tools-list {
@@ -765,8 +848,13 @@ main { overflow-x: hidden; }
 
 @keyframes fadeIn {
 
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 
 }
 
@@ -795,9 +883,13 @@ main { overflow-x: hidden; }
  * #PROJECT
 \*-----------------------------------*/
 
-.project { padding-block: var(--section-padding); }
+.project {
+  padding-block: var(--section-padding);
+}
 
-.project-list > li { margin-bottom: 25px; }
+.project-list>li {
+  margin-bottom: 25px;
+}
 
 .project-card {
   position: relative;
@@ -827,7 +919,9 @@ main { overflow-x: hidden; }
   padding: 20px;
 }
 
-.project-card .card-title { margin-bottom: 10px; }
+.project-card .card-title {
+  margin-bottom: 10px;
+}
 
 .project-card :is(.card-title, .publish-date) {
   background: var(--bg-primary);
@@ -850,7 +944,9 @@ main { overflow-x: hidden; }
   opacity: 1;
 }
 
-.project-card:is(:hover, :focus) .publish-date { transition-delay: 0.1s; }
+.project-card:is(:hover, :focus) .publish-date {
+  transition-delay: 0.1s;
+}
 
 .load-more {
   font-size: var(--fs-4);
@@ -867,9 +963,13 @@ main { overflow-x: hidden; }
  * #CONTACT
 \*-----------------------------------*/
 
-.contact { padding-block: var(--section-padding); }
+.contact {
+  padding-block: var(--section-padding);
+}
 
-.contact-content { margin-bottom: 50px; }
+.contact-content {
+  margin-bottom: 50px;
+}
 
 .contact-list-item {
   display: flex;
@@ -883,9 +983,13 @@ main { overflow-x: hidden; }
   color: var(--color-primary);
 }
 
-.contact-item-icon ion-icon { --ionicon-stroke-width: 40px; }
+.contact-item-icon ion-icon {
+  --ionicon-stroke-width: 40px;
+}
 
-.contact-item-title { margin-bottom: 10px; }
+.contact-item-title {
+  margin-bottom: 10px;
+}
 
 .contact-list-item .contact-info {
   color: var(--color-secondary);
@@ -894,7 +998,9 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.contact-info:not(address):is(:hover, :focus) { color: var(--color-primary); }
+.contact-info:not(address):is(:hover, :focus) {
+  color: var(--color-primary);
+}
 
 .contac-social-list {
   display: flex;
@@ -934,7 +1040,9 @@ main { overflow-x: hidden; }
   box-shadow: var(--shadow-1);
 }
 
-.form-wrapper { margin-bottom: 25px; }
+.form-wrapper {
+  margin-bottom: 25px;
+}
 
 .form-label {
   color: var(--color-primary);
@@ -944,7 +1052,9 @@ main { overflow-x: hidden; }
   margin-left: 5px;
 }
 
-.input-wrapper { position: relative; }
+.input-wrapper {
+  position: relative;
+}
 
 .input-field {
   background: var(--input-bg);
@@ -971,9 +1081,13 @@ textarea.input-field {
   resize: vertical;
 }
 
-.input-field:focus { outline: 1px solid; }
+.input-field:focus {
+  outline: 1px solid;
+}
 
-.input-field:focus + ion-icon { color: var(--raw-seinna); }
+.input-field:focus+ion-icon {
+  color: var(--raw-seinna);
+}
 
 .contact .btn-primary {
   max-width: unset;
@@ -997,7 +1111,9 @@ textarea.input-field {
   box-shadow: var(--shadow-1);
 }
 
-.footer .logo { margin-bottom: 15px; }
+.footer .logo {
+  margin-bottom: 15px;
+}
 
 .copyright {
   color: var(--color-secondary);
@@ -1065,7 +1181,9 @@ textarea.input-field {
     margin-inline: auto;
   }
 
-  .section-title { max-width: 380px; }
+  .section-title {
+    max-width: 380px;
+  }
 
 
 
@@ -1078,7 +1196,9 @@ textarea.input-field {
     column-gap: 25px;
   }
 
-  .project-list > li:first-child { column-span: all; }
+  .project-list>li:first-child {
+    column-span: all;
+  }
 
 }
 
@@ -1096,9 +1216,13 @@ textarea.input-field {
    * REUSED STYLE
    */
 
-  .container { max-width: 720px; }
+  .container {
+    max-width: 720px;
+  }
 
-  .section-title { max-width: 430px; }
+  .section-title {
+    max-width: 430px;
+  }
 
 
 
@@ -1106,7 +1230,9 @@ textarea.input-field {
    * STATS
    */
 
-  .stats-list { grid-template-columns: 1fr 1fr; }
+  .stats-list {
+    grid-template-columns: 1fr 1fr;
+  }
 
 
 
@@ -1121,9 +1247,13 @@ textarea.input-field {
     gap: 20px;
   }
 
-  .about .btn { max-width: max-content; }
+  .about .btn {
+    max-width: max-content;
+  }
 
-  .about .btn-secondary { margin-bottom: 0; }
+  .about .btn-secondary {
+    margin-bottom: 0;
+  }
 
 
 
@@ -1174,7 +1304,9 @@ textarea.input-field {
    * REUSED STYLE
    */
 
-  .container { max-width: 980px; }
+  .container {
+    max-width: 980px;
+  }
 
   .section-content {
     position: relative;
@@ -1202,18 +1334,26 @@ textarea.input-field {
    * HEADER
    */
 
-  .header { padding-block: 30px; }
+  .header {
+    padding-block: 30px;
+  }
 
-  .header.active { padding-block: 15px; }
+  .header.active {
+    padding-block: 15px;
+  }
 
   .navbar-actions {
     order: 1;
     margin-left: 0;
   }
 
-  .nav-toggle-btn { display: none; }
+  .nav-toggle-btn {
+    display: none;
+  }
 
-  .navbar { all: unset; }
+  .navbar {
+    all: unset;
+  }
 
   .navbar-link {
     transform: translateY(0);
@@ -1221,7 +1361,7 @@ textarea.input-field {
     padding-inline: 5px;
   }
 
-  .navbar-list > li {
+  .navbar-list>li {
     margin: 0;
     padding: 0;
     overflow: visible;
@@ -1234,7 +1374,9 @@ textarea.input-field {
     gap: 20px;
   }
 
-  .navbar-link::before { height: 2px; }
+  .navbar-link::before {
+    height: 2px;
+  }
 
 
 
@@ -1268,7 +1410,9 @@ textarea.input-field {
     filter: drop-shadow(2px 4px 10px var(--black));
   }
 
-  .hero .btn-primary:is(:hover, :focus) { color: hsl(0, 0%, 12%); }
+  .hero .btn-primary:is(:hover, :focus) {
+    color: hsl(0, 0%, 12%);
+  }
 
   .hero-social-list {
     display: block;
@@ -1296,7 +1440,9 @@ textarea.input-field {
     transition: var(--transition-1);
   }
 
-  .hero-social-link:is(:hover, :focus) { color: var(--color-primary); }
+  .hero-social-link:is(:hover, :focus) {
+    color: var(--color-primary);
+  }
 
   .hero-social-link .tooltip {
     --trans-x: 10px;
@@ -1339,9 +1485,13 @@ textarea.input-field {
    * STATS
    */
 
-  .stats-list { grid-template-columns: repeat(3, 1fr); }
+  .stats-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-  .stats-card { height: 100%; }
+  .stats-card {
+    height: 100%;
+  }
 
 
 
@@ -1357,7 +1507,9 @@ textarea.input-field {
     gap: 30px;
   }
 
-  .about-banner { margin-bottom: 0; }
+  .about-banner {
+    margin-bottom: 0;
+  }
 
 
 
@@ -1373,9 +1525,13 @@ textarea.input-field {
     gap: 50px;
   }
 
-  .skills-content { margin-bottom: 0; }
+  .skills-content {
+    margin-bottom: 0;
+  }
 
-  .skills-toggle { margin-inline: 0; }
+  .skills-toggle {
+    margin-inline: 0;
+  }
 
 
 
@@ -1383,9 +1539,11 @@ textarea.input-field {
    * PROJECT
    */
 
-  .project-list { column-count: 3; }
+  .project-list {
+    column-count: 3;
+  }
 
-  .project-list > li:first-child {
+  .project-list>li:first-child {
     column-span: unset;
     margin: 25px;
     margin-left: 0;
@@ -1403,11 +1561,17 @@ textarea.input-field {
     gap: 30px;
   }
 
-  .contact-content { margin-bottom: 0; }
+  .contact-content {
+    margin-bottom: 0;
+  }
 
-  .contact-form { width: 100%; }
+  .contact-form {
+    width: 100%;
+  }
 
-  .contact-list { margin-left: -40px; }
+  .contact-list {
+    margin-left: -40px;
+  }
 
 
 
@@ -1421,7 +1585,9 @@ textarea.input-field {
     align-items: center;
   }
 
-  .footer .logo { margin-bottom: 0; }
+  .footer .logo {
+    margin-bottom: 0;
+  }
 
 }
 
@@ -1439,9 +1605,13 @@ textarea.input-field {
    * REUSED STYLE
    */
 
-  .container { max-width: 1150px; }
+  .container {
+    max-width: 1150px;
+  }
 
-  .section-title { max-width: 460px; }
+  .section-title {
+    max-width: 460px;
+  }
 
 
 
@@ -1450,9 +1620,13 @@ textarea.input-field {
    * HERO
    */
 
-  .hero-social-list { left: -80px; }
+  .hero-social-list {
+    left: -80px;
+  }
 
-  .scroll-down { right: -80px; }
+  .scroll-down {
+    right: -80px;
+  }
 
 
 
@@ -1461,6 +1635,8 @@ textarea.input-field {
    * ABOUT
    */
 
-  .about-banner { max-width: 450px; }
+  .about-banner {
+    max-width: 450px;
+  }
 
 }
