--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -451,11 +451,13 @@ body.active {
   width: 100%;
   transition: var(--transition-1);
   z-index: 4;
+   
 }
 
 .header.active {
   padding-block: 12px;
-  backdrop-filter: blur(100px);
+  background: var(--bg-primary);
+ 
   box-shadow: var(--shadow-1);
 }
 
