--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -211,19 +211,36 @@ body {
 \*-----------------------------------*/
 .whatsapp-btn {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-
+  
+  
+  bottom: 40px;
+  right: 15px;
+  width: 60px;
+  height: 60px;
+  display: grid;
+  place-items: center;
 
   z-index: 1000;
   display: flex;
   align-items: center;
+  
 }
 
 .whatsapp-btn img {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
+
+ 
+  position: fixed;
+  bottom: 100px;
+  right: 15px;
+  width: 60px;
+  height: 60px;
+  display: grid;
+  place-items: center;
+ 
+ 
+
+  pointer-events: none;
+ 
 }
 
 *,
@@ -1126,7 +1143,7 @@ textarea.input-field {
 
 .go-top {
   position: fixed;
-  bottom: 100px;
+  bottom: 130px;
   right: 24px;
   width: 40px;
   height: 40px;
