--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -22,6 +22,25 @@
   transition: var(--transition-1);
 }
 
+
+
+
+.image-container {
+  width: 100%;
+  height: 400px; /* Ajusta la altura según tus necesidades */
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Esto asegura que la imagen se ajuste al contenedor sin salirse */
+  object-position: center; /* Centra la imagen en el contenedor */
+}
+
 .carousel-card:is(:hover, :focus)::after {
 
   backdrop-filter: blur(0.5px);
@@ -676,7 +695,18 @@ body.active {
   width: 100%;
 }
 
-
+.highlight-circle {
+  position: absolute;
+  top: 3px;
+  left: 19px;
+  width: 400px;
+  height: 150px;
+  background: white;
+  border-radius: 50%;
+  filter: blur(30px);
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
 
 
 
@@ -700,7 +730,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 115px;
+  padding-top: 60px;
   margin-bottom: var(--section-padding);
 }
 
@@ -715,16 +745,23 @@ main {
 }
 
 .hero-content {
-  max-width: 450px;
+  max-width: 550px;
+  
+  z-index: 1;
+
+
+ 
 }
 
 .hero-title {
   text-align: center;
-  margin-bottom: 30px;
+  
+  margin-bottom: 20px;
 }
 
 .hero .btn-primary {
   margin-inline: auto;
+
 }
 
 
@@ -1431,6 +1468,7 @@ textarea.input-field {
 
   .section-title {
     max-width: 380px;
+    
   }
 
 
