--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -13,6 +13,14 @@
   border-radius: var(--radius-12);
   box-shadow: 2px 4px 6px hsla(0, 0%, 0%, 0.2);
 }
+.carousel-card2 {
+  height: 100%;
+  width: 80%;
+  position: relative;
+  overflow: hidden;
+  border-radius: var(--radius-12);
+  box-shadow: 2px 4px 6px hsla(0, 0%, 0%, 0.2);
+}
 
 .carousel-card::after {
   content: "";
@@ -37,6 +45,12 @@
 .image-container img {
   width: 100%;
   height: 100%;
+  object-fit: cover; /* Esto asegura que la imagen se ajuste al contenedor sin salirse */
+  object-position: center; /* Centra la imagen en el contenedor */
+}
+.image-container img2 {
+  width: 100%;
+  height: auto;
   object-fit: cover; /* Esto asegura que la imagen se ajuste al contenedor sin salirse */
   object-position: center; /* Centra la imagen en el contenedor */
 }
