--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -2109,4 +2109,111 @@ textarea.input-field {
   }
 }
 
+
+
+}
+/* ------------ WHATSAPP FLOAT ------------ */
+.whatsapp-wrapper {
+  position: fixed;
+  bottom: 20px;
+  right: 100px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  z-index: 1000;
+}
+
+.whatsapp-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.whatsapp-btn svg {
+  width: 60px;
+  height: 60px;
+  display: block;
+}
+
+.whatsapp-menu {
+  position: absolute;
+  bottom: 60px; /* eleva el menú por encima del botón */
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  animation: fadeIn 0.2s ease-out;
+}
+
+.whatsapp-menu__item {
+  background: #25d366;
+  color: #fff;
+  padding: 8px 62px;
+  border-radius: 8px;
+  font-size: 1rem;
+  text-decoration:none;
+  text-align: center;
+  text-wrap: nowrap;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+.whatsapp-menu__item:hover {
+  background: #1ebe57;
+}
+
+.whatsapp-menu {
+  animation: fadeInBounce 0.6s cubic-bezier(0.22, 1, 0.36, 1) both;
+}
+
+/* Keyframes con rebote y scale */
+@keyframes fadeInBounce {
+  0% {
+    opacity: 0;
+    transform: translateX(120px) translateY(60px) scale(0.95);
+  }
+  60% {
+    opacity: 0.9;
+    transform: translateX(-10px) scale(1.09);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+/* --------- MEDIA QUERIES --------- */
+@media (max-width: 992px) {
+  .whatsapp-wrapper { bottom: 16px; right: 16px; }
+  .whatsapp-btn svg { width: 52px; height: 52px; }
+  .whatsapp-menu__item { font-size: 0.85rem; padding: 6px 10px; }
+}
+
+@media (max-width: 768px) {
+  .whatsapp-wrapper { bottom: 40px; right: 120px; }
+  .whatsapp-btn svg { width: 60px; height: 60px; }
+  .whatsapp-menu__item { font-size: 1.2rem; padding: 6px 8px; }
+}
+
+@media (max-width: 480px) {
+  .whatsapp-wrapper { bottom: 40px; right: 89px; }
+  .whatsapp-btn svg { width: 60px; height: 60px;  }
+  .whatsapp-menu__item {font-size: 1.2rem; padding: 6px 60px; }
+}
+/* cubre toda la pantalla */
+.overlay {
+  position: fixed;
+  inset: 0;                   /* top/right/bottom/left = 0 */
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+  z-index: 999;               /* por encima del contenido */
+  /* aquí viene la magia */
+  backdrop-filter: blur(5px);
+  /* color semitransparente para atenuar */
+  background: rgba(255,255,255,0.2);
+}
+
+.overlay--visible {
+  visibility: visible;
+  opacity: 30;
 }
